--- a/ios/Podfile
+++ b/ios/Podfile
@@ -78,6 +78,19 @@ abstract_target "ReactNative" do
   end
 end
 
+pre_install do 
+  # For RN 0.59 remove Core UIWebView references
+  # https://github.com/facebook/react-native/issues/26255#issuecomment-528275747
+  puts("Removing UIWebView reference from RN 0.59 Core")
+  react_project = Xcodeproj::Project.open("../node_modules/react-native/React/React.xcodeproj")
+  react_project.main_group["React/Views"].files.each do |file|
+    if file.path.match(/^RCTWebView/)
+      file.remove_from_project
+    end
+  end
+  react_project.save
+end
+
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     target.build_configurations.each do |config|
@@ -87,23 +100,6 @@ post_install do |installer|
           config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] << "DEBUG=1"
         end
       end
-    end
-  end
-  
-  # For RN 0.59 remove Core UIWebView references
-  installer.pods_project.targets.each do |target|
-    if target.name == 'React'
-        puts "Removing UIWebview references form RN 0.59."
-        build_phase = target.source_build_phase
-        source_files = build_phase.files
-        files_to_delete = source_files.find_all do |file|
-          file.file_ref.pretty_print == 'RNCUIWebView.h' || file.file_ref.pretty_print == 'RNCUIWebView.m' || file.file_ref.pretty_print == 'RNCUIWebViewManager.h' || file.file_ref.pretty_print == 'RNCUIWebViewManager.m' || file.file_ref.pretty_print == 'RCTWebView.h' || file.file_ref.pretty_print == 'RCTWebView.m' || file.file_ref.pretty_print == 'RCTWebViewManager.h' ||
-          file.file_ref.pretty_print == 'RCTWebViewManager.m'
-        end
-        files_to_delete.each do |file|
-          source_files.delete file
-          puts "File #{file.display_name} removed from build."
-        end
     end
   end
 end
