--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -98,6 +98,7 @@ project.ext.vectoricons = [
 ]
 
 dependencies {
+    implementation project(':react-native-code-push')
     implementation project(":react-native-firebase")
     implementation project(":mendixnative-release")
     implementation fileTree(dir: "libs", include: ["*.jar"])
