--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -3,5 +3,7 @@ apply from: file("../node_modules/@react-native-community/cli-platform-android/n
 
 include ':react-native-firebase'
 project(':react-native-firebase').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-firebase/android')
+include ':react-native-code-push'
+project(':react-native-code-push').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-code-push/android/app')
 
 include ':app', ':mendixnative-release'
