--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-reanimated": "1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-sound": "0.11.0",
+    "react-native-splash-screen": "3.2.0",
     "react-native-sqlite-storage": "4.1.0",
     "react-native-svg": "12.0.3",
     "react-native-touch-id": "4.4.1",
