--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,8 @@ ios/Pods/
 
 # node.js
 #
-node_modules/
+# Use / before node_modules because iOS assets folder has a node_modules folder that should not be excluded.
+/node_modules/
 npm-debug.log
 yarn-error.log
 
