--- a/ios/Config/config.xcconfig
+++ b/ios/Config/config.xcconfig
@@ -1,6 +1,6 @@
 PRODUCT_BUNDLE_IDENTIFIER = $(BUNDLE_IDENTIFIER)$(BUNDLE_IDENTIFIER_APPEND)
 
 BUNDLE_DISPLAY_NAME = NativeTemplate
-BUNDLE_IDENTIFIER = com.mendix.nativetemplate
+BUNDLE_IDENTIFIER = com.mendix.native.template
 
 RUNTIME_URL = http:\/\/localhost:8080
