Revert "Update bundle ids"
(cherry picked from commit 356c44609c3e8b660ea8e6e105e1f64d88eaae97)

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,7 +33,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.mendix.native.template"
+        applicationId "com.mendix.nativetemplate"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         missingDimensionStrategy "react-native-camera", "general"
