Change working directory to be android
(cherry picked from commit ae29632689efad8af97f0b4f2138a7d8fe5bcdb2)

--- a/.github/workflows/android-assembleDevDebug.yml
+++ b/.github/workflows/android-assembleDevDebug.yml
@@ -22,4 +22,5 @@ jobs:
               with:
                     packageManager: npm
             - name: Build with Gradle
-              run: ./android/gradlew assembleDevDebug
+              run: ./gradlew assembleDevDebug
+              working-directory: ./android
