--- a/.github/workflows/ios-build-custom-dev-app.yml
+++ b/.github/workflows/ios-build-custom-dev-app.yml
@@ -21,5 +21,5 @@ jobs:
       run: pod install
       working-directory: ./ios
     - name: build
-      run: xcodebuild -workspace nativetemplate.xcworkspace -scheme Dev
+      run: xcodebuild archive -workspace nativetemplate.xcworkspace -scheme Dev -archivePath ./nativetemplate.xcarchive
       working-directory: ./ios
