--- a/.github/workflows/ios-build-custom-dev-app.yml
+++ b/.github/workflows/ios-build-custom-dev-app.yml
@@ -13,6 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: pod install
+      run: pod install
+      working-directory: ./ios
     - name: iOS Build Action
       uses: yukiarrr/ios-build-action@v0.5.1
       with:
