--- a/.github/workflows/ios-build-custom-dev-app.yml
+++ b/.github/workflows/ios-build-custom-dev-app.yml
@@ -13,6 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: npm install
+      uses: Jaid/action-npm-install@v1.2.4
+      with:
+        packageManager: npm
     - name: pod install
       run: pod install
       working-directory: ./ios
