Ignored disabled capabilities

--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "capabilities": {
         "deepLink": {
+            "enabled": true,
             "ios": {
                 "imports": [
                     "\"React/RCTLinkingManager.h\""
