Align naming with android
(cherry picked from commit 5b30a6dc844b94743ea36abab7d4439a61da0e24)

--- a/dependency-config.json
+++ b/dependency-config.json
@@ -12,7 +12,7 @@
                 }
             }
         },
-        "pushNotification": {
+        "pushNotifications": {
             "ios": {
                 "imports": [
                     "<Firebase.h>",
