Support for google maps api key
(cherry picked from commit a069a773ee83a50d584bb1f203440dfa34dd49c2)

--- a/capabilities-setup-config.json
+++ b/capabilities-setup-config.json
@@ -79,14 +79,15 @@
             }
         }
     },
-    "maps": {
+    "maps": {},
+    "mapsIos": {
         "ios": {
             "AppDelegate": {
                 "imports": [
                     "#import <GoogleMaps/GoogleMaps.h>"
                 ],
                 "didFinishLaunchingWithOptions": [
-                    "[GMSServices provideAPIKey:@\"_YOUR_API_KEY_\"];"
+                    "[GMSServices provideAPIKey:[[NSBundle mainBundle] objectForInfoDictionaryKey:@\"GoogleMapsApiKey\"] ?: @\"\"];"
                 ]
             },
             "pods": {
