--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "native-template",
-  "version": "3.1.0",
+  "version": "6.0.0",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
@@ -9,49 +9,51 @@
   },
   "dependencies": {
     "@react-native-community/art": "1.2.0",
-    "@react-native-community/async-storage": "1.8.1",
-    "@react-native-community/cameraroll": "1.4.0",
-    "@react-native-community/datetimepicker": "2.3.0",
+    "@react-native-community/async-storage": "1.12.0",
+    "@react-native-community/cameraroll": "4.0.1",
+    "@react-native-community/datetimepicker": "3.0.3",
     "@react-native-community/geolocation": "2.0.2",
-    "@react-native-community/masked-view": "0.1.7",
-    "@react-native-community/netinfo": "5.6.2",
-    "jsc-android": "245459.0.0",
-    "react": "~16.9.0",
-    "react-native": "0.61.5",
-    "react-native-ble-plx": "1.1.1",
-    "react-native-calendar-events": "1.7.3",
-    "react-native-camera": "3.19.2",
-    "react-native-code-push": "6.1.1",
-    "react-native-dark-mode": "0.2.2",
-    "react-native-device-info": "5.5.3",
-    "react-native-fast-image": "8.1.5",
-    "react-native-firebase": "5.6.0",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "5.9.7",
+    "@react-native-firebase/analytics": "^7.6.7",
+    "@react-native-firebase/app": "^8.4.5",
+    "@react-native-firebase/crashlytics": "^8.4.9",
+    "@react-native-firebase/messaging": "^7.9.0",
+    "@react-native-firebase/ml-vision": "^7.4.8",
+    "jsc-android": "^245459.0.0",
+    "react-native": "0.63.3",
+    "react-native-ble-plx": "2.0.1",
+    "react-native-calendar-events": "2.1.0",
+    "react-native-camera": "3.40.0",
+    "react-native-code-push": "6.3.0",
+    "react-native-device-info": "6.1.0",
+    "react-native-fast-image": "8.3.2",
     "react-native-geocoder": "0.5.0",
-    "react-native-gesture-handler": "1.6.0",
-    "react-native-image-picker": "2.3.1",
-    "react-native-inappbrowser-reborn": "3.3.4",
-    "react-native-localize": "1.3.4",
-    "react-native-maps": "0.27.0",
-    "react-native-reanimated": "1.7.0",
-    "react-native-safe-area-context": "0.7.3",
+    "react-native-gesture-handler": "1.8.0",
+    "react-native-image-picker": "2.3.4",
+    "react-native-inappbrowser-reborn": "3.4.0",
+    "react-native-localize": "1.4.2",
+    "react-native-maps": "0.27.1",
+    "react-native-reanimated": "1.13.1",
+    "react-native-safe-area-context": "3.1.8",
     "react-native-sound": "0.11.0",
     "react-native-splash-screen": "3.2.0",
-    "react-native-sqlite-storage": "4.1.0",
-    "react-native-svg": "12.0.3",
+    "react-native-sqlite-storage": "5.0.0",
+    "react-native-svg": "12.1.0",
     "react-native-touch-id": "4.4.1",
-    "react-native-vector-icons": "6.6.0",
+    "react-native-vector-icons": "7.1.0",
     "react-native-video": "5.0.2",
     "react-native-view-shot": "3.1.2",
-    "react-native-webview": "8.1.2"
+    "react-native-webview": "10.9.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.4",
-    "@babel/runtime": "^7.5.4",
+    "@babel/core": "^7.8.4",
+    "@babel/runtime": "^7.8.4",
     "babel-jest": "^25.2.6",
     "detox": "17.6.1",
     "jest": "^25.2.7",
     "jetifier": "^1.6.3",
-    "metro-react-native-babel-preset": "^0.58.0",
+    "metro-react-native-babel-preset": "^0.63.0",
     "react-test-renderer": "~16.9.0"
   },
   "jest": {
