--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jest": "^25.2.7",
     "jetifier": "^1.6.3",
     "metro-react-native-babel-preset": "^0.58.0",
+    "patch-package": "^6.2.2",
     "react-test-renderer": "~16.9.0"
   },
   "jest": {
