--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "3.1.0",
   "private": true,
   "scripts": {
-    "postinstall": "npx patch-package && npx jetify"
+    "postinstall": "npx patch-package && npx jetify && offline",
+    "offline": "nbui-offline init --config-path='./config.json' --verbose"
   },
   "dependencies": {
     "@react-native-community/art": "1.2.0",
@@ -50,6 +51,7 @@
     "jest": "^25.2.7",
     "jetifier": "^1.6.3",
     "metro-react-native-babel-preset": "^0.58.0",
+    "nbui-offline": "file:../nbui-offline",
     "patch-package": "^6.2.2",
     "react-test-renderer": "~16.9.0"
   },
