--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
     "@react-native-community/geolocation": "2.0.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/netinfo": "5.9.7",
-    "@react-native-community/push-notification-ios": "^1.7.1",
-    "@react-native-firebase/app": "^9.0.0",
-    "@react-native-firebase/messaging": "^8.0.1",
-    "jsc-android": "^245459.0.0",
+    "@react-native-community/push-notification-ios": "1.7.1",
+    "@react-native-firebase/app": "10.1.0",
+    "@react-native-firebase/messaging": "10.1.0",
     "react-native": "0.63.3",
     "react-native-ble-plx": "2.0.1",
     "react-native-calendar-events": "2.1.0",
@@ -44,17 +43,8 @@
     "react-native-webview": "10.9.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/runtime": "^7.8.4",
-    "babel-jest": "^25.2.6",
     "detox": "17.6.1",
-    "jest": "^25.2.7",
     "jetifier": "^1.6.3",
-    "metro-react-native-babel-preset": "^0.63.0",
-    "patch-package": "^6.2.2",
-    "react-test-renderer": "~16.9.0"
-  },
-  "jest": {
-    "preset": "react-native"
+    "patch-package": "^6.2.2"
   }
 }
